@@ -42,6 +42,7 @@ o wake up the daemon iff there are real events to handle instead of polling
 o add support for tagged vlan interfaces in the config file, e.g. eth0.1
 o improve alarm framework based on suggestions from Max Kellerman
 o constify queue_iterate()
+o use list_del_init() and list_empty() to check if a node is in the list
 
 Max Kellermann <max@duempel.org>:
 
